--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,5 +4,5 @@ services:
     frontend:
         container_name: flagedu_affiliate
         restart: unless-stopped
-        image: docker.pkg.github.com/mubarak117136/flagedu-affiliate/flagedu-affiliate:prod
+        image: menaheero/flag-aff:dev1
         command: sh -c "yarn start"
